force-app/main/default/objects/ContactRequest/fields/AutoAbandonedFlag__c.field-meta.xml
<CustomField>
    <fullName>AutoAbandonedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to true when the Scheduled Contact Request is marked as &quot;Abandoned&quot; through an automated process and is used for reporting purposes.</description>
    <inlineHelpText>This is set to true when the Scheduled Contact Request is marked as &quot;Abandoned&quot; through an automated process and is used for reporting purposes.</inlineHelpText>
    <label>Auto Abandoned Flag</label>
    <type>Checkbox</type>
</CustomField>