force-app/main/default/objects/ContactRequest/fields/ScheduledDate__c.field-meta.xml
<CustomField>
	<fullName>ScheduledDate__c</fullName>
	<description>Capture the scheduled date and time of the contact request.</description>
	<inlineHelpText>Capture the scheduled date and time of the contact request.</inlineHelpText>
	<label>Scheduled Date</label>
	<type>DateTime</type>
</CustomField>