force-app/main/default/objects/ContactRequest/listViews/UnifiedCustomerServiceContactQueue_ContactRequest.listView-meta.xml
<ListView>
    <fullName>UnifiedCustomerServiceContactQueue_ContactRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>Unified Customer Service Contact Queue</label>
    <queue>UnifiedCustomerServiceContactQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>